fix align issue

--- a/style/main.css
+++ b/style/main.css
@@ -1,75 +1,127 @@
 * {
-  color: #333;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
-  background-color: #e0e0e0;
+  /* overflow: hidden; */
+  background-color: #f5f2f2;
+  color: #333;
 }
 .images {
+  max-width: 100%;
+  border: 1px solid #d3d3d3;
+
+  transition: transform 2s;
+  /* overflow: hidden; */
   width: 250px;
   height: 180px;
-  /* width: 75%;
-  height: 50%; */
+  /* width: 75%; */
+  max-height: 100%;
   border: 1px solid #d3d3d3;
   border-radius: 10px;
   background: url(../img/loading.gif) 50% no-repeat;
 }
+.images:hover {
+  transform: scale(0.8);
+}
 
-.search-header {
+/* .search-header {
   margin: 25px auto;
   text-align: center;
+} */
+form {
+  max-width: 500px;
+  margin: 25px auto;
 }
-#search-item {
-  border: 2px solid #d3d3d3;
-  font-size: 16px;
-  border-right: none;
+/* .fas fa-search {
+  position: absolute;
+} */
+
+input[type='text'] {
+  border: none;
+  font-size: 17px;
   padding: 10px;
   outline: none;
-  width: 300px;
+  float: left;
+  width: 80%;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
+input:focus {
+  padding: 9px;
+  border: 1px solid dodgerblue;
+  /* outline: solid 1px dodgerblue; */
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+  border-right: none;
+}
+
 #submit {
-  border: 2px solid #d3d3d3;
-  border-left: none;
-  font-size: 16px;
-  color: #e0e0e0;
+  float: left;
+  background: dodgerblue;
+
+  width: 15%;
+  color: white;
   padding: 10px;
-  background: #00b5c3;
-  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  font-size: 17px;
   cursor: pointer;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  outline: none;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 #submit:hover {
   color: white;
   font-weight: bold;
 }
+
+#submit:active {
+  background-color: dodgerblue;
+  box-shadow: 0 3px #666;
+  transform: translateY(2px);
+}
+.results {
+  clear: both;
+}
+#text-results {
+  width: 30%;
+  /* display: block; */
+  float: right;
+
+  /* background-color: #d3d3d3; */
+  margin: 15px 5px 5px 5px;
+
+  /* width: 100%; */
+}
+
 .search-images {
-  width: 69%;
+  width: 67%;
   float: left;
   /* background-color: #d3d3d3; */
-  margin: 2px;
+  margin: 15px 5px 5px 5px;
 }
 
 .search-images a {
   text-align: center;
 }
 .search-results {
-  width: 29%;
-  float: left;
-  /* background-color: red; */
+  width: 100%;
+  /* display: block; */
+  /* float: right; */
+  visibility: hidden;
+  margin-top: 15px;
+  background-color: white;
   /* background-color: #d3d3d3; */
-  margin: 2px;
+  margin: 1px;
   border-radius: 10px;
 }
-.results {
-  width: 100%;
-}
+
 .search-images a {
   float: left;
   width: 33.33%;
@@ -86,8 +138,21 @@ li {
   margin-bottom: 5px;
 }
 
+li a:hover,
+li a:active {
+  width: 100%;
+  background-color: dodgerblue;
+  color: white;
+  font-weight: bold;
+  display: list-item;
+  border-radius: 10px;
+  padding: 3px;
+  /* list-style-type: none; */
+}
+
 .search-results a {
   text-decoration: none;
+  color: #333;
 }
 
 .search-results a:link,
@@ -97,16 +162,12 @@ li {
   margin-bottom: 1px;
 }
 
-.search-results a:hover,
-.search-results a:active {
-  background-color: #e2dfdf;
-  color: purple;
-}
-
 .pagination {
   width: 100%;
   text-align: center;
   visibility: hidden;
+  position: relative;
+  margin-top: 13px;
 }
 .pagination a {
   color: #000000;
